--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,10 +33,12 @@ section#login {
     overflow: hidden;
 
     background-color: white;
-    height: 500px;
     width: 250px;
+    height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.432);
+    transition: width 0.4s, height 0.6s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
