--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -16,7 +16,7 @@ Grandes telas: acima de 1200px
 */
 
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 1200px) {
 
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
@@ -29,18 +29,27 @@ Grandes telas: acima de 1200px
 
     section#login > div#imagem {
         float: left;
-        width: 30%;
+        width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario {
         float: right;
-        width: 70%;
+        width: 50%;
     } 
+
+    div#formulario h1 {
+    font-size: 1.5em;
+    }
+    
+    div#formulario p {
+    font-size: 1.2em;
+    }
 
 }
 
-@media screen and (min-width: 993px) {
+
+@media screen and (min-width: 1201px) {
     
     body {
         background-image: linear-gradient(to top,#5f2c82, #49a09d);
@@ -51,15 +60,26 @@ Grandes telas: acima de 1200px
     }
 
     section#login > div#imagem {
-        float: left;
-        width: 50%;
+        background: url(../imagens/frente.jpg);
+        background-size: cover;
+        background-position: center;
+        float: right;
+        width: 70%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
-        width: 50%;
-    } 
+        float: left;
+        width: 30%;
+    }
+
+    div#formulario h1 {
+    font-size: 2em;
+}
+    
+    div#formulario p {
+    font-size: 1.2em;
+}
 
     
 }
