--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,13 +43,23 @@ section#login {
 
 section#login > div#imagem {
     display: block;
-    background: #5f2c82 url(../imagens/frente.jpg) no-repeat;
+    background: #5f2c82 url(../imagens/lado.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     height: 200px;
 }
 
 section#login > div#formulario {
+    
     display: block;
     padding: 10px;
+}
+
+div#formulario h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario p {
+    font-size: 0.8em;
 }
