--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -16,6 +16,19 @@ Grandes telas: acima de 1200px
 */
 
 
+@media screen and (max-width: 767px) {
+   div.campo > input {
+   background-color: #94cfcd;
+   font-size: 1em;
+   width:80%;
+   height: 100%;
+   transform: translateY(-13px);
+   border: 0px;
+   border-radius: 8px;
+}
+}
+
+
 @media screen and (min-width: 768px) and (max-width: 1200px) {
 
     body {
@@ -24,6 +37,7 @@ Grandes telas: acima de 1200px
  
     section#login {
         width: 80vw;
+        height: 350px;
     }
 
 
@@ -46,6 +60,16 @@ Grandes telas: acima de 1200px
     font-size: 1.2em;
     }
 
+    div.campo > input {
+   background-color: #94cfcd;
+   font-size: 1em;
+   width:80%;
+   height: 100%;
+   transform: translateY(-13px);
+   border: 0px;
+   border-radius: 8px;
+}
+
 }
 
 
@@ -57,6 +81,7 @@ Grandes telas: acima de 1200px
     
     section#login {
         width: 950px;
+        height: 400px;
     }
 
     section#login > div#imagem {
@@ -81,5 +106,14 @@ Grandes telas: acima de 1200px
     font-size: 1.2em;
 }
 
+div.campo > input {
+   background-color: #94cfcd;
+   font-size: 1em;
+   width:83%;
+   height: 100%;
+   transform: translateY(-13px);
+   border: 0px;
+   border-radius: 8px;
+}
     
 }
