--- a/estilos/style.css
+++ b/estilos/style.css
@@ -66,11 +66,35 @@ div#formulario p {
 
 form > div.campo {
     background-color: #9445c9;
+    border: 2px solid #9445c9;
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
+}
+
+div.campo > i {
+    color: white;
+    /*background-color: black;*/
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+   background-color: #94cfcd;
+   font-size: 1em;
+   width:88%;
+   height: 100%;
+   transform: translateY(-13px);
+   border: 0px;
+   border-radius: 8px;
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+    border: none;
 }
 
 form > input[type=submit] {
